refactor: se agrega un refactor manual inicial al controlador ResolucionCompletaController
